# pycharting

./: .gitignore  QUICK_START.md  README.md  START_HERE.md  charting_prd.txt  demo.py  idea.text  pyproject.toml  run.py
.taskmaster/docs/: prd_multi_chart_python_api.txt
examples/: demo_all_features.py  quick_demo.py  simple_plot.py
scripts/: generate_sample_data.py
src/: __init__.py
src/api/: __init__.py  exceptions.py  interface.py  main.py  models.py  processor.py  routes.py
src/charting/: __init__.py  browser.py  charting.py  launcher.py  mapper.py  server.py
src/charting/api/: main.py  models.py  processor.py  routes.py
src/charting/frontend/: app.js  divider.css  divider.js  index.html  multi-chart.js
src/charting/ingestion/: __init__.py  loader.py  schema.py
src/charting/processing/: pivot.py  resampler.py
src/core/: lifecycle.py  server.py
src/frontend/: app.js  chart.js  data-client.js  divider.js  index.html  layout-manager.js  multi-chart.js
src/ingestion/: loader.py
src/processing/: __init__.py  indicators.py  pivot.py  resampler.py
src/pycharting/: __init__.py
src/pycharting/api/: interface.py  routes.py
src/pycharting/core/: lifecycle.py  server.py
src/pycharting/data/: ingestion.py
src/pycharting/web/static/: demo.html  viewport-demo.html
src/pycharting/web/static/js/: chart.js  viewport.js
src/python_api/: __init__.py  browser.py  charting.py  detector.py  launcher.py  mapper.py  server.py  transformer.py
src/web/static/: demo.html  viewport-demo.html
tests/: conftest.py  test_api_app.py  test_api_column_params.py  test_api_comprehensive.py  test_api_errors.py  test_api_integration.py  test_api_processor_integration.py  test_api_routes.py  test_api_security.py  test_browser.py  test_chart_advanced.py  test_chart_manager.py  test_charting.py  test_charting_enhanced.py  test_configuration.py  test_csv_loader.py  test_data_client.py  test_data_client_advanced.py  test_data_ingestion.py  test_dataframe_optimization.py  test_datetime_parsing.py  test_dependencies.py  test_detector.py  test_detector_classification.py  test_detector_logging.py  test_detector_mapper_integration.py  test_divider.mjs  test_frontend_html.py  test_frontend_modules.py  test_frontend_uplot.py  test_import.py  test_indicators_api.py  test_indicators_ema.py  test_indicators_performance.py  test_indicators_rsi.py  test_indicators_sma.py  test_indicators_validation.py  test_integration.py  test_launcher.py  test_layout_manager.mjs  (+24 more)
