[tool.poetry]
name = "charting"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.123.4"
pandas = "^2.3.3"
numpy = "^2.3.5"
pydantic = "^2.12.5"
uvicorn = "^0.38.0"
pytz = "^2025.2"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
