[tool.poetry]
name = "pycharting"
version = "0.2.2"
description = "High-performance financial charting library for OHLC data visualization with technical indicators"
authors = ["ali askar <26202651+alihaskar@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/alihaskar/pycharting"
repository = "https://github.com/alihaskar/pycharting"
keywords = ["charting", "finance", "ohlc", "technical-indicators", "trading", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Visualization",
]
packages = [{include = "charting", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.123.4"
pandas = "^2.3.3"
numpy = "^2.3.5"
pydantic = "^2.12.5"
uvicorn = "^0.38.0"
pytz = "^2025.2"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
